--- a/produtos.html
+++ b/produtos.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8"
+        <meta charset="UTF-8">
         <title>produtos - Barbearia Alura</title>
         <link rel="stylesheet"href="reset.css">
-        <link rel="stylesheet" href="produtos.css"
+        <link rel="stylesheet" href="produtos.css">
     </head>
     <body>
+        
         <header>
-            <h1><img src="logo.png"</h1>
+            <h1><img src="logo.png"></h1>
 
             <nav>
             <ul>
